--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DevContext": "Data Source=.\\SQLEXPRESS;Initial Catalog=DevDB;Integrated Security=True;MultipleActiveResultSets=True"
+    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
